# cropmirror-utils

./: .gitignore  250322_algorithm_definition_v2.xml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.md
src/calc_geotiff_area/src/: analyze_geotiff_crs.py
src/example/eat/: apple.py
src/ndvi/: README.md  __init__.py  ndvi.py
src/ndvi/generatevalues/: common.py  fertilization.py  irragation.py  irrigation.py  seedling.py  spraying.py
src/ndvi/growth/: vigor_monitoring.py
src/ndvi/prescription/: common.py  fertilization_prescription.py  files.py  irrigation_prescription.py  spraying_prescription.py
src/rgb/: ngrdi.py
src/test/ndvi/: ndvi.tif  testIrrigation.py  test_fertilization.py  test_spraying.py
src/utils/: geojson_format_conversion.py  polygon.py  shp2geojson.py
src/utils/geotiff_toolkit/: reclassify.py
src/utils/shp_toolkit/: toolkit.py
src/vigorroot/: vigorroot.py
